--- a/app/views/players/_popup_modal_host.html.erb
+++ b/app/views/players/_popup_modal_host.html.erb
@@ -1,5 +1,5 @@
 <button id="popup-button" class="d-none" data-toggle="modal" data-target="#popup-host">Edit nickname</button>
-<div class="modal fade" id="popup-host" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="popup-host" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-backdrop="static">
   <div class="modal-dialog modal-dialog-centered">
     <div id="modal" class="modal-content m-auto" style="width: 250px;">
       <div class="modal-body text-center">
