--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -5,7 +5,11 @@
 <!-- Find a way to change image with results image -->
 <%# content_for :meta_image, cl_image_path(@result.photo.path) %>
 
-<div class="spinner d-none" id="loading">
+<div class="d-none" id="loading">
+  <div class="circular-background">
+    <div class="spinner">
+    </div>
+  </div>
 </div>
 
 <div class="container-fluid" style="100vh">
