--- a/app/views/rounds/_show_impostor.html.erb
+++ b/app/views/rounds/_show_impostor.html.erb
@@ -6,7 +6,7 @@
         <h3 class="notification">You are the <strong id="notification-impostor">IMPOSTOR</strong></h3>
         <h5>Your job is to lie to your friends and to not get caught.</h5>
       <% else %>
-        <h3 class="notification">You're <strong id="notification-non">NOT</strong> the impostor!</h3>
+        <h3 class="notification">You are <strong id="notification-non">NOT</strong> the impostor!</h3>
         <h5>Good! Be honest with your friends and answer the questions sincerely.</h5>
       <% end %>
 
