--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -10,6 +10,7 @@
   <!-- Waiting page -->
   <%= render "show_waiting", players: @players, instance: @instance, game: @game, qr_code: @svg %>
   </div>
+  <div id=notifs></div>
 </div>
 
 
