--- a/app/views/results/_result_chart.html.erb
+++ b/app/views/results/_result_chart.html.erb
@@ -5,7 +5,9 @@
         <div id="result-avatar"><%= cl_image_tag player.user.avatar.key, class: "avatar" %></div>
         <div class="d-flex">
           <div class="px-3"><p><%= player.nickname %></p></div>
-          <div id="impostor-label" class="d-none impostor-label" style="position:absolute; right:10px">IMPOSTOR</div>
+          <% if player.id == @instance.impostor_player_id %>
+            <div id="impostor-label" class="d-none impostor-label" style="position:absolute; right:10px">IMPOSTOR</div>
+          <% end %>
         </div>
       </div>
       <div id="who-voted-who" class="d-flex">
